--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  margin: 0 auto;
   background-color: #f0f0f0;
 }
 
@@ -13,7 +14,8 @@ header {
   width: 100vw;
   height: 80px;
   display: flex;
-  justify-content: space-around;
+  padding: 0 70px;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #000;
   background-color: rgb(19, 1, 75);
@@ -70,7 +72,7 @@ header {
   width: 340px;
   padding-bottom: 16px;
   border-radius: 10px;
-  background-color: rgb(56, 24, 151);
+  background-color: rgb(19, 1, 75);
   color: white;
 }
 
@@ -80,7 +82,7 @@ header {
   background-size: cover;
   width: 100%;
   height: 340px;
-  background-color: green;
+  background-color: rgb(56, 24, 151);
   border-radius: 10px 10px 0 0;
 }
 
@@ -113,5 +115,84 @@ header {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  body {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  .cinemaBox {
+    width: 260px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  header {
+    width: 100%;
+  }
+
+  .cinemaCards {
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+  .cinemaBox {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  header {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .search {
+    padding: 7px 18px;
+    width: 180px;
+  }
+
+  .cinemaCards {
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+  .cinemaBox {
+    width: 220px;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  header {
+    width: 100%;
+    justify-content: space-between;
+    padding: 0 20px;
+  }
+
+  .title {
+    font-size: 22px;
+  }
+
+  .search {
+    padding: 7px 15px;
+    width: 160px;
+  }
+
+  .btn-search {
+    font-size: 18px;
+    padding: 7px 8px;
+  }
+
+  .cinemaCards {
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+  .cinemaBox {
+    width: 300px;
   }
 }
